--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -14,14 +14,14 @@ body {
 
 .logo {
     display: flex;
-    margin-right: -500px;
+    margin-right: 5px;
     align-items: center;
     text-decoration: none;
     color:#f9f9f9 
 }
 
 .logo img {
-    width: 5px; 
+    width: 50px; 
     height: auto;
 }
 
@@ -252,15 +252,16 @@ footer {
 
 .footer-map iframe {
     border: none;
-    width: 200px;
-    height: 200px;
-    margin-right: 30px;
+    width: 100%; /* Set width to 100% */
+    height: 200px; /* Maintain the desired height */
+    margin-right: 30px; /* Optionally adjust margin */
 }
 
 .footer-map {
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden; /* Ensure map stays within container */
 }
 
 .copyright {
